opam-version: "1.2"
maintainer: "Enguerrand Decorne <enguerrand.decorne@ahrefs.com>"
authors: ["Enguerrand Decorne <enguerrand.decorne@ahrefs.com>"]
homepage: "https://git.ahrefs.com/ahrefs/ocaml-rocksdb"
doc: "https://git.ahrefs.com/ahrefs/ocaml-rocksdb"
license: "MIT"
dev-repo: "https://git.ahrefs.com/ahrefs/ocaml-rocksdb.git"
bug-reports: "https://git.ahrefs.com/ahrefs/ocaml-rocksdb/issues"
available: [ ocaml-version >= "4.03.0"]
depends: [
  "dune" {build & >="1.0+beta10"}
  "ctypes" {>="0.12.0"}
  "astring"
  "rresult" {test}
  "bos" {test}
  "cryptokit" {test}
  "alcotest" {test}
]
depexts: ["librocksdb-dev"] {os-distribution = "debian"}
build: [
  ["dune" "subst" "-p" name "--name" name] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest"]
]
