(rule
 (targets g.ml)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -ml))))

(rule
 (targets rocksdb_stubs.c)
 (deps ../stubgen/ffi_stubgen.exe)
 (action (with-stdout-to %{targets} (run %{deps} -c)))
)

(library
 (name rocksdb_ffi)
 (public_name rocksdb.ffi)
 (modules g m)
 (c_names rocksdb_stubs)
 (flags (:standard -w -9-27-32-34))
 (c_library_flags -lrocksdb)
 (c_flags (-I/usr/include/rocksdb -Wno-discarded-qualifiers))
 (libraries rocksdb.bindings ctypes.stubs ctypes)
)
